# api/v2/swagger/swagger.json
@@ -389,10 +389,22 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "the supported language list, separated by commas. e.g. 'en,zh,ja' ",
+                        "description": "the supported language list, separated by commas. e.g. 'en,zh,ja'",
                         "name": "supportedLanguageList",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "a flag for returning cities",
+                        "name": "displayCity",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "a string which represents regions, separated by commas. e.g. US, PT, CN",
+                        "name": "regions",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1063,7 +1075,7 @@
                     "type": "string"
                 },
                 "pseudo": {
-                    "type": "string"
+                    "type": "object"
                 },
                 "region": {
                     "type": "string"
